Fix table redrawing on small height viewport changes, restructure Expenses

--- a/client/src/sass/components/_Button.scss
+++ b/client/src/sass/components/_Button.scss
@@ -40,6 +40,27 @@
     background-color: transparent;
   }
 
+  &--back-arrow {
+    display: flex;
+    gap: 0.5rem;
+    margin: 0.5rem auto 0 0;
+    
+    font-size: 1.25rem;
+    box-shadow: none;
+    border-radius: 0;
+    padding: 0;
+    border-bottom: 1px solid transparent;
+
+    &:hover {
+      background-color: transparent;
+      border-bottom: 1px solid black;
+    }
+
+    &__arrow {
+      letter-spacing: -5px;
+    }
+  }
+
   &--edit {
     padding: 0.15rem;
     width: 2rem;
