--- a/client/src/sass/components/_Expenses.scss
+++ b/client/src/sass/components/_Expenses.scss
@@ -2,9 +2,8 @@
   display: flex;
   flex-direction: column;
 
-  &__navigation {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  &__heading {
+    margin: 0 0 1rem 0;
+    text-align: center;
   }
 }
